maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:5: error: ')' expected but '}' found.
	if (estFaceMur) {gauche(); if (estFaceMur() {keepHandOnRightWall()}} else {avance()}
                                                                           ^