maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
    def keepHandOnRightWall() = {
	droite();
	if (estFaceMur) {gauche(); if (estFaceMur() {keepHandOnRightWall()}} else {avance()}
    }
    while (!(estSurBiscuit)) {
    	keepHandOnRightWall();
    	if (!estFaceMur) {avance()};
    }
    prendBiscuit();
}
